Fixed flicker when showing web views.

--- a/docs/style.css
+++ b/docs/style.css
@@ -3,6 +3,7 @@ body {
     font-family: Lato, Georgia;
     font-size: 18px;
     text-align: center
+    text-color: rgba(51, 51, 51, 1.0);
 }
 
 p {
